# magi

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  SKILL.md  install.sh  uninstall.sh
.codex-plugin/: plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: 1-bug_report.yml  2-feature_request.yml  3-documentation.yml  4-question.yml  5-ci_cd.yml  config.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml
.serena/: project.yml
docs/: design.md
integrations/magi-agent-plugin/: .gitignore  README.md
integrations/magi-agent-plugin/.claude-plugin/: marketplace.json  plugin.json
integrations/magi-agent-plugin/commands/: magi-agent.md  magi-system.md
integrations/magi-agent-plugin/hooks/: hooks.json  magi-session-start.sh
integrations/magi-agent-plugin/lib/: magi_agent_bridge.py  magi_agent_bridge.ts  package-lock.json  package.json  requirements.txt
integrations/magi-agent-plugin/skills/magi-agent/: SKILL.md
scripts/: join.sh  whoami.sh
skills/magi/: SKILL.md
skills/magi/agents/: openai.yaml
src/: cli.rs  config.rs  error.rs  install.rs  invite.rs  lib.rs  main.rs  messaging.rs  model.rs  proc.rs  redis_client.rs  redis_manager.rs  repl.rs  ssh.rs  team.rs  watch.rs
src/lua/: consume_invite.lua
templates/: cmd.claude-code.md  cmd.codex.md
tests/: cli_parse.rs  config.rs  install_ssh.rs  messaging_redis.rs  proc.rs  redis_integration.rs  redis_manager.rs  repl_watch.rs  team_invite.rs  test_legacy_scripts.bats  test_team.bats
tests/common/: mod.rs
(+1 files in other folders)
