[package]
name = "magi"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
rand = "0.9"
redis = { version = "1", features = ["tokio-comp", "streams"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "signal", "fs", "io-util", "time"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"
